# mixedlm

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: ci.yml  codeql-rust.yml  fuzz.yml  publish.yml  release-drafter.yml  rust-ci.yml  security.yml  stale.yml
benchmarks/: benchmark_comparison.py  benchmark_julia.jl  benchmark_reml_algorithms.py
docs/: changelog.md
docs/api/: utilities.md
docs/background/: estimation.md
docs/getting-started/: installation.md
docs/tutorials/: glmm.md  linear-mixed-models.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_cholesky.rs
python/mixedlm/: __init__.py
python/mixedlm/datasets/: __init__.py  lme4.py
python/mixedlm/diagnostics/: __init__.py  influence.py  plots.py
python/mixedlm/estimation/: __init__.py  em_reml.py  laplace.py  nlmm.py  optimizers.py  reml.py
python/mixedlm/families/: __init__.py  base.py
python/mixedlm/formula/: __init__.py  parser.py  terms.py
python/mixedlm/inference/: __init__.py  allfit.py  anova.py  bootstrap.py  ddf.py  drop1.py  emmeans.py  profile.py  profile_types.py
python/mixedlm/matrices/: __init__.py  design.py
python/mixedlm/models/: __init__.py  checks.py  control.py  glmer.py  glmer_fit.py  lmer.py  lmer_fit.py  lmer_types.py  modular.py  nlmer.py  result_mixin.py  shared_utils.py
python/mixedlm/nlme/: __init__.py  models.py
python/mixedlm/power/: __init__.py
python/mixedlm/utils/: __init__.py  dataframe.py  lme4_compat.py  na_action.py  variance.py
src/: blocked_chol.rs  glmm.rs  lib.rs  linalg.rs  lmm.rs  nlmm.rs  quadrature.rs  reml_algorithms.rs  simulation.rs
tests/: _lmer_data.py  test_benchmark.py  test_ddf.py  test_em_reml.py  test_lme4_compat.py  test_lmer.py  test_lmer_accessors.py  test_lmer_control_optimizers_modular.py  test_lmer_fits.py  test_lmer_formula_matrices.py  test_lmer_inference.py  test_lmer_prediction_diagnostics.py  test_lmer_refit_getme.py  test_new_features.py  test_new_lme4_features.py  test_nlmer_methods.py  test_polars.py  test_power.py  test_profile.py  test_property.py  test_rust_bindings.py  test_sparse_paths.py  test_statistical_golden.py  test_ztwz_cache.py
