[package]
name = "mixedlm"
version = "1.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.87"

[lib]
name = "_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module", "abi3-py310"] }
numpy = "0.27.1"
ndarray = "0.17.2"
sprs = "0.11.4"
sprs-ldl = "0.10"
nalgebra = "0.34.1"
nalgebra-sparse = "0.11.0"
num-traits = "0.2.19"
thiserror = "2.0.17"
faer = "0.24.0"
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11.0"

[dev-dependencies]
proptest = "1.6"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.release.build-override]
opt-level = 3
